add and style/format video

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
   <link href="/resources/css/style.css" rel="stylesheet">
 </head>
 <body>
+
+  <!-- Title and Link -->
   <div class="title">
     <h1>Discover hidden places in the world around you</h1>
     <a href="index.html">Download Excursion (Coming Soon!)</a>
   </div>
+
+  <main>
+    <!-- Video -->
+    <video class="video" src="/resources/videos/excursion.mp4" autoplay loop type="mp4"></video>
+
+  </main>
 </body>
 </html>
