add more text and style it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
   <main>
     <!-- Video -->
-    <video class="video" src="/resources/videos/excursion.mp4" autoplay loop type="mp4"></video>
+    <video class="video" src="/resources/videos/excursion.mp4" type="mp4" autoplay loop></video>
+
+    <!-- More Text -->
+    <h1 class="h1">Your personal travel guide</h1>
+    <p class="p">Excursion remembers places you like, and recommends new points of interest around you.</p>
 
   </main>
 </body>
