--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <h1 class="h1">Your personal travel guide</h1>
     <p class="p">Excursion remembers places you like, and recommends new points of interest around you.</p>
 
+    <!-- Image Camp -->
+     <p><img src="/resources/images/camp.jpg" alt="Camp Image"></p>
+
+     <p><img src="/resources/images/phone.png" alt="Phone Icon"></p>
+
   </main>
 </body>
 </html>
