--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
      <p><img src="/resources/images/phone.png" alt="Phone Icon"></p>
 
+     <h1 class="padding-bt">Coming Soon for iPhone and Android</h1>
+     <a href="index.html">Download Excursion (Coming Soon!)</a>
+
+     <footer>
+      © Excursion
+     </footer>
+
   </main>
 </body>
 </html>
